src/main/resources/static/css/style.css
/* Custom Stylesheet */
/**
 * Use this file to override Materialize files so you can update
 * the core Materialize files in the future
 *
 * Made By MaterializeCSS.com
 */

.icon-block {
  padding: 0 15px;
}
.icon-block .material-icons {
	font-size: inherit;
}
.title {
    text-align: center;
}
.title h1 {
    display: inline-block;
}

.title a {
  margin-left: 20px;
}
#triplist a {
  display: block;
  color: black;
}

#triplist a i {
  color: grey;
  position: absolute;
  top: -10px;
  right: -10px;
}
#titlecontainer {
  width: 100px;
  height: 100px;
  position: relative;
  left: 20px;
}

#triplist:hover {
  background-color: rgb(96, 209, 224);
}

.icons {
  position: relative;
  right: -100px;
}

.iconsright {
  position: relative;
  left: 28px;
}

.iconsright .editicon {
  position: absolute;
  right: 30px;
}

.icons .editicon {
  position: absolute;
  right: 30px;
}

#editbutton, .remain, .duration {
  position: absolute;
  top: 0px;
  right: -80px;
}

#editbutton {
  top: 5px;
}

.remain {
  z-index: 20;
  top: -50px;
  white-space: nowrap;
}

.duration {
  z-index: 20;
  top: -50px;
  left: 100px;
  white-space: nowrap;
}

#stickylink {
  position: sticky;
  bottom: 0px;
  float: right;
}

#stickylink i {
  font-size: 35px;
}

.dropdown-content {
    max-height: 350px;
    max-width: 325px;
    overflow-x: hidden;
}

#user_sett {
   font-size: 50px;
}

#addbutton {
  float: right;
}

.errortext {
  color: red;
}

